# ODOO_HACK

./: .gitignore  README.md  REPORT.md  SECURITY.md  docker-compose.db.yml  docker-compose.kafka.yml  docker-compose.yml
backend/: .env  .env.example  .gitignore  README.md  ROLLBACK.md  SETUP_LOCAL.md  alembic.ini  config.py  database.py  demo_check.sh  dependencies.py  inspect_database.py  main.py  pyproject.toml  test_kafka.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_add_refresh_tokens.py  0003_add_txn_id_to_journal_entries.py  0004_add_transactions_table.py  2025_09_20_2201_73e961c08fb3_init.py  2025_09_20_2203_eaf1c1f20cdc_init.py  2025_09_20_2228_94215bad85c7_add_processed_events.py
backend/api/: accounting_reports.py  auth.py  chat.py  health.py  healthz.py  hsn_api_proxy.py  masters.py  readyz.py  realtime.py  reports.py  transaction_events.py  transactions.py
backend/config/: account_mappings.example.json
backend/consumers/: transaction_consumer.py
backend/crud/: masters.py  refresh_tokens.py  reports.py  users.py
backend/infrastructure/db/: connector.py
backend/infrastructure/observability/: logging_config.py  metrics_middleware.py  rate_limit_middleware.py  request_id_middleware.py  security_headers_middleware.py
backend/models/: auth.py  events.py  ledger.py  masters.py  payments.py  reporting.py  tokens.py  transactions.py
backend/schemas/: auth.py  ledger.py  masters.py
backend/scripts/: benchmark_dispatch.py  post_event.sh  post_purchase.sh  post_sale.sh  seed_coa.sh  smoke_conversion_payment.sh  smoke_realtime.sh  smoke_so_convert_pay.sh  smoke_tests.sh
backend/services/: accounting_engine.py  auth_service.py  event_dispatcher.py  hsn_api_proxy.py  inventory_service.py  kafka_producer.py  posting_service.py  realtime.py  reporting_service.py  tx_headers.py
backend/services/llm/: sql_agent.py  tools.py  tools_sql.py
backend/tests/: test_accounting_engine.py  test_auth_integration.py  test_auth_masters_e2e.py  test_cogs_posting.py  test_connector.py  test_dispatch_failures.py  test_healthz.py  test_invoice_posting.py  test_masters_api.py  test_masters_edge_cases.py  test_payment_posting.py  test_phase1_integration.py  test_posting_edges.py  test_readyz.py  test_reports_api.py  test_transactions_flow.py  test_transactions_payment_flow.py
cloud-accounting-proto/: README.md  customer_portal.html  dashboard.html  index.html  invoice.html  masters.html  payments.html  purchase.html  reports.html  sales.html  signup.html  vendor_bill.html
frontend/: .env.example  README.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend_basic/: app.js  index.html  styles.css
load/: k6_scenario.js
(+84 files in other folders)
