[project]
name = "backend"
version = "0.1.0"
description = "ODOO_HACK Backend - Master Data Management API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.21.0",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "pytest-cov>=4.1.0",
    "alembic>=1.13.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api",
    "crud",
    "models",
    "schemas",
    "services",
    "infrastructure",
]

[tool.pytest.ini_options]
addopts = "--cov=models --cov=crud --cov=api --cov=services --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
