[project]
name = "backend"
version = "0.1.0"
description = "ODOO_HACK Backend - Master Data Management API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.21.0",
    "kafka-python>=2.0.2,<3",
    "alembic>=1.16.5",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "groq>=0.31.1",
    "langchain-groq>=0.3.8",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
]
